Add header and logo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <body>
 
   <header>
-    <h1></h1>
+    <h1>The Solar Systems</h1>
+      <img src="images/logo.svg" alt="hahahaha">
   </header>
 
   <main>
-    <p> Lorem ipsum dolor sit amet.</p>
-    <img src="images/logo.svg" alt="hahahaha">
-    <a href="https://www.wikipedia.org"> Wikipedia</a>
+    <p> </p>
   </main>
 </body>
 </html>
