--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML template</title>
+  <title>The Solar System</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
   <header>
-    <h1>The Solar Systems</h1>
-      <img src="images/logo.svg" alt="hahahaha">
+    <img src="images/logo.svg" alt="hahahaha">
+    <h1>The Solar System</h1>
   </header>
 
   <main>
