--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   </header>
 
   <main>
+    <figure>
     <img src="images/banner.svg" alt="banner">
+  <figcaption>The Solar System—our home in the stars</figcaption>
+</figure>
   </main>
 </body>
 </html>
