--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="images/banner.svg" alt="banner">
   <figcaption>The Solar System—our home in the stars</figcaption>
 </figure>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
   </main>
 </body>
 </html>
